# otrsp

./: .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  windowpos.cpp  windowpos.h
Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
Debug/otrsp_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
Debug/otrsp_autogen/include/: ui_mainwindow.h
lib/: miniconf.h  picojson.h  serialib.h
test/: config.json  otrsp
